--- a/htdocs/typo3conf/ext/speciality/package.json
+++ b/htdocs/typo3conf/ext/speciality/package.json
@@ -1,13 +1,9 @@
 {
   "name": "speciality",
   "version": "1.0.0",
-  "description": "Wssinfo website",
+  "description": "Manage assets for this website",
   "main": "Gruntfile.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "Fabien Udriot <fabien.udriot@ecodev.ch>",
-  "license": "BSD",
   "devDependencies": {
     "grunt": "~0.4.2",
     "grunt-contrib-jshint": "~0.6.3",
@@ -19,6 +15,7 @@
     "grunt-contrib-copy": "~0.5.0",
     "grunt-string-replace": "~0.2.7",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-imagine": "~0.3.3"
+    "grunt-imagine": "~0.3.3",
+    "grunt-pngmin": "~0.6.1"
   }
 }
