--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
 		"helhum/typo3-console": "1.*.*",
 		"fab/vidi": "2.*.*",
 		"fab/vidi-frontend": "1.*.*",
-		"fab/natural-gallery": "0.9.*",
+		"fab/natural-gallery": "1.*.*",
 		"fab/media": "4.*.*"
 	},
 	"require-dev": {
