--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
 		"fluidtypo3/vhs": "2.*.*",
 
 		"typo3-ter/nc-staticfilecache": "*",
-		"typo3-ter/realurl": "*",
+		"typo3-ter/realurl": "2.0.15",
 		"typo3-ter/seo-basics": "*",
 
 		"helhum/typo3-console": "1.*.*",
